--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -6,3 +6,14 @@
 
 <p>Antes de realizar qualquer depósito, consulte os Termos e condições de uso do repositório.</p>
 <p>Se precisar de assistência, entre em contato com a Biblioteca IPEN.</p>
+
+<style>
+#centers {
+    background-image: url(assets/img/atom.jpg);
+    background-repeat:no-repeat;
+    background-position: center center;
+}
+</style>
+<div id ="centers" class="">
+XX
+</div>
