--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -9,7 +9,7 @@
 
 <style>
 #centers {
-    background-image: url(assets/img/atom.jpg);
+    background-image: url(/dvn/assets/img/atom.jpg);
     background-repeat:no-repeat;
     background-position: center center;
 }
