--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -12,6 +12,8 @@
     background-image: url(/dvn/assets/img/atom.jpg);
     background-repeat:no-repeat;
     background-position: center center;
+    background-size: 60px, auto, contain;
+
 }
 </style>
 <div id ="centers" class="">
