--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -12,7 +12,7 @@
     background-image: url(/dvn/assets/img/atom.jpg);
     background-repeat:no-repeat;
     background-position: center center;
-    background-size: 60px, auto, contain;
+    background-size: 160px;
 
 }
 </style>
