--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -13,10 +13,13 @@
     background-repeat:no-repeat;
     background-position: center center;
     background-size: 160px;
+    height: 200px;
 
 }
 </style>
-<div id ="centers" class="">
-XXXXXXXXXXXXXXXXXXXXXXXXX
+<div id ="centers" class="text-center">
+    <a href="" class="btn btn-outline-primary btn-lg" role="button">Depositar</a>
+    <a href="" class="btn btn-outline-primary btn-lg" role="button">Depositar</a>
+    <a href="" class="btn btn-outline-primary btn-lg" role="button">Depositar</a>
 </div>
 XXX
