--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -14,12 +14,41 @@
     background-position: center center;
     background-size: 160px;
     height: 200px;
-
 }
+.btnipen
+    {
+        background-color: #f5f5f5;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        color: #333;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 1.42857;
+        margin-bottom: 0;
+        padding: 6px 12px;
+        text-align: center;
+        vertical-align: middle;
+        white-space: nowrap;
+    }
 </style>
 <div id ="centers" class="text-center">
-    <a href="" class="btn btn-outline-primary btn-lg" role="button">Depositar</a>
-    <a href="" class="btn btn-outline-primary btn-lg" role="button">Depositar</a>
-    <a href="" class="btn btn-outline-primary btn-lg" role="button">Depositar</a>
+    <a href="" class="btnipen" role="button">CEBIO</a>
+    <a href="" class="btnipen" role="button">CECCO</a>
+    <br>
+    <a href="" class="btnipen" role="button">CECTM</a>
+    <a href="" class="btnipen" role="button">CECON</a>
+    <a href="" class="btnipen" role="button">CEENG</a>
+    <br>
+    <a href="" class="btnipen" role="button">CELAP</a>
+    <a href="" class="btnipen" role="button">SEGMR</a>
+    <a href="" class="btnipen" role="button">CEQMA</a>
+    <a href="" class="btnipen" role="button">CECRF</a>
+    <br>
+    <a href="" class="btnipen" role="button">CERPQ</a>
+    <a href="" class="btnipen" role="button">CETER</a>
+    <a href="" class="btnipen" role="button">SEIDC</a>
+    <br>
+    <a href="" class="btnipen" role="button">Projetos<br>Especiais</a>
+
 </div>
-XXX
