--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -30,6 +30,7 @@
         text-align: center;
         vertical-align: middle;
         white-space: nowrap;
+        margin: 10px 10px 10px 10px;
     }
 </style>
 <div id ="centers" class="text-center">
