--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -12,8 +12,8 @@
     background-image: url(/dvn/assets/img/atom.jpg);
     background-repeat:no-repeat;
     background-position: center center;
-    background-size: 360px;
-    height: 360px;
+    background-size: 560px;
+    height: 560px;
 }
 .btnipen
     {
@@ -34,6 +34,7 @@
     }
 </style>
 <div id ="centers" class="text-center">
+    <div style="margin-top: 40px;"></div>
     <a href="" class="btnipen" role="button">CEBIO</a>
     <a href="" class="btnipen" role="button">CECCO</a>
     <br>
