--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -34,23 +34,23 @@
     }
 </style>
 <div id ="centers" class="text-center">
-    <div style="margin-top: 40px;"></div>
-    <a href="" class="btnipen" role="button">CEBIO</a>
-    <a href="" class="btnipen" role="button">CECCO</a>
+    <div style="margin-top: 140px;">XX</div>
+    <a href="/dataverse/CEBIO" class="btnipen" role="button">CEBIO</a>
+    <a href="/dataverse/CECCO" class="btnipen" role="button">CECCO</a>
     <br>
-    <a href="" class="btnipen" role="button">CECTM</a>
-    <a href="" class="btnipen" role="button">CECON</a>
-    <a href="" class="btnipen" role="button">CEENG</a>
+    <a href="/dataverse/CECTM" class="btnipen" role="button">CECTM</a>
+    <a href="/dataverse/CECON" class="btnipen" role="button">CECON</a>
+    <a href="/dataverse/CEENG" class="btnipen" role="button">CEENG</a>
     <br>
-    <a href="" class="btnipen" role="button">CELAP</a>
-    <a href="" class="btnipen" role="button">SEGMR</a>
-    <a href="" class="btnipen" role="button">CEQMA</a>
-    <a href="" class="btnipen" role="button">CECRF</a>
+    <a href="/dataverse/CELAP" class="btnipen" role="button">CELAP</a>
+    <a href="/dataverse/SEGMR" class="btnipen" role="button">SEGMR</a>
+    <a href="/dataverse/CEQMA" class="btnipen" role="button">CEQMA</a>
+    <a href="/dataverse/CECRF" class="btnipen" role="button">CECRF</a>
     <br>
-    <a href="" class="btnipen" role="button">CERPQ</a>
-    <a href="" class="btnipen" role="button">CETER</a>
-    <a href="" class="btnipen" role="button">SEIDC</a>
+    <a href="/dataverse/CERPQ" class="btnipen" role="button">CERPQ</a>
+    <a href="/dataverse/CETER" class="btnipen" role="button">CETER</a>
+    <a href="/dataverse/SEIDC" class="btnipen" role="button">SEIDC</a>
     <br>
-    <a href="" class="btnipen" role="button">Projetos<br>Especiais</a>
+    <a href="/dataverse/projects" class="btnipen" role="button">Projetos<br>Especiais</a>
 
 </div>
