--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -34,8 +34,7 @@
     }
 </style>
 <div id ="centers" class="text-center">
-<br/>
-<br/><br/><br/>
+<div style="height: 100px;"></div>
     <a href="/dataverse/CEBIO" class="btnipen" role="button">CEBIO</a>
     <a href="/dataverse/CECCO" class="btnipen" role="button">CECCO</a>
     <br>
@@ -52,6 +51,6 @@
     <a href="/dataverse/CETER" class="btnipen" role="button">CETER</a>
     <a href="/dataverse/SEIDC" class="btnipen" role="button">SEIDC</a>
     <br>
-    <a href="/dataverse/projects" class="btnipen" style="margin-left: 100px; size: 0.6em" role="button">Projetos<br>Especiais</a>
+    <a href="/dataverse/projects" class="btnipen" style="margin-left: 160px; size: 0.6em" role="button">Projetos<br>Especiais</a>
 
 </div>
