--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -31,10 +31,16 @@
         vertical-align: middle;
         white-space: nowrap;
         margin: 10px 10px 10px 10px;
+        text-decoration: none;
     }
+.btnipen:hover
+    {
+        border: 1px solid #333;
+    }
+
 </style>
 <div id ="centers" class="text-center">
-<div style="height: 100px;"></div>
+<div style="height: 200px;"></div>
     <a href="/dataverse/CEBIO" class="btnipen" role="button">CEBIO</a>
     <a href="/dataverse/CECCO" class="btnipen" role="button">CECCO</a>
     <br>
