--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -25,7 +25,6 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 1.42857;
-        margin-bottom: 0;
         padding: 6px 12px;
         text-align: center;
         vertical-align: middle;
@@ -36,6 +35,7 @@
 .btnipen:hover
     {
         border: 1px solid #333;
+        background-color: #1f1f8f;
     }
 
 </style>
