--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -1,63 +1,79 @@
-<h1>Seja bem-vindo!</h1>
-<p>Deposite, arquive e compartilhe seus dados de pesquisa no RDC IPEN</p>
-
-<p>O Repositório de Dados Científicos do IPEN (RDC) foi criado com a missão de promover o compartilhamento responsável de dados científicos, se inserindo no conceito de ciência aberta e transparência da informação. Trata-se de um facilitador para os pesquisadores do IPEN no sentido de ter a disposição um banco de dados para registrar, armazenar, reunir, compartilhar divulgar e gerenciar os dados produzidos durante a elaboração das suas pesquisas cientificas.</p>
-
-
-<p>Antes de realizar qualquer depósito, consulte os Termos e condições de uso do repositório.</p>
-<p>Se precisar de assistência, entre em contato com a Biblioteca IPEN.</p>
-
 <style>
-#centers {
+  #centers {
     background-image: url(/dvn/assets/img/atom.jpg);
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-position: center center;
     background-size: 560px;
     height: 560px;
-}
-.btnipen
-    {
-        background-color: #f5f5f5;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        color: #333;
-        display: inline-block;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 1.42857;
-        padding: 6px 12px;
-        text-align: center;
-        vertical-align: middle;
-        white-space: nowrap;
-        margin: 10px 10px 10px 10px;
-        text-decoration: none;
-    }
-.btnipen:hover
-    {
-        border: 1px solid #333;
-        background-color: #1f1f8f;
-        color: white;
-    }
-
+  }
+  .btnipen {
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: #333;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857;
+    padding: 6px 12px;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    margin: 10px 10px 10px 10px;
+    text-decoration: none;
+  }
+  .btnipen:hover {
+    border: 1px solid #333;
+    background-color: #1f1f8f;
+    color: white;
+  }
 </style>
-<div id ="centers" class="text-center">
-<div style="height: 150px;"></div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h1>Seja bem-vindo!</h1>
+    <p>Deposite, arquive e compartilhe seus dados de pesquisa no RDC IPEN</p>
+
+    <p>
+      O Repositório de Dados Científicos do IPEN (RDC) foi criado com a missão
+      de promover o compartilhamento responsável de dados científicos, se
+      inserindo no conceito de ciência aberta e transparência da informação.
+      Trata-se de um facilitador para os pesquisadores do IPEN no sentido de ter
+      a disposição um banco de dados para registrar, armazenar, reunir,
+      compartilhar divulgar e gerenciar os dados produzidos durante a elaboração
+      das suas pesquisas cientificas.
+    </p>
+
+    <p>
+      Antes de realizar qualquer depósito, consulte os Termos e condições de uso
+      do repositório.
+    </p>
+    <p>Se precisar de assistência, entre em contato com a Biblioteca IPEN.</p>
+  </div>
+  <div id="centers" class="text-center col-md-6">
+    <div style="height: 150px"></div>
     <a href="/dataverse/CEBIO" class="btnipen" role="button">CEBIO</a>
     <a href="/dataverse/CECCO" class="btnipen" role="button">CECCO</a>
-    <br>
+    <br />
     <a href="/dataverse/CECTM" class="btnipen" role="button">CECTM</a>
     <a href="/dataverse/CECON" class="btnipen" role="button">CECON</a>
     <a href="/dataverse/CEENG" class="btnipen" role="button">CEENG</a>
-    <br>
+    <br />
     <a href="/dataverse/CELAP" class="btnipen" role="button">CELAP</a>
     <a href="/dataverse/SEGMR" class="btnipen" role="button">SEGMR</a>
     <a href="/dataverse/CEQMA" class="btnipen" role="button">CEQMA</a>
     <a href="/dataverse/CECRF" class="btnipen" role="button">CECRF</a>
-    <br>
+    <br />
     <a href="/dataverse/CERPQ" class="btnipen" role="button">CERPQ</a>
     <a href="/dataverse/CETER" class="btnipen" role="button">CETER</a>
     <a href="/dataverse/SEIDC" class="btnipen" role="button">SEIDC</a>
-    <br>
-    <a href="/dataverse/projects" class="btnipen" style="margin-left: 160px; size: 0.6em" role="button">Projetos<br>Especiais</a>
-
+    <br />
+    <a
+      href="/dataverse/projects"
+      class="btnipen"
+      style="margin-left: 160px; size: 0.6em"
+      role="button"
+      >Projetos<br />Especiais</a
+    >
+  </div>
 </div>
