--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -65,7 +65,7 @@
             class="btn btn-default"
             id="btnDataverseSearch"
             type="submit"
-            onclick="window.location = '/dataverse/?q=' + document.getElementById('inputDataverseSearch').value;return false;"
+            onclick="window.location = '/dataverse/IPEN/?q=' + document.getElementById('inputDataverseSearch').value;return false;"
           >
             <i class="glyphicon glyphicon-search"></i>
           </button>
@@ -73,7 +73,8 @@
       </div>
     </form>
     <!-- BOTAO EXPLORAR-->
-    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href='/dataverse/'">Explorar</button>
+    <br/>
+    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href='/dataverse/IPEN/'">Explorar nossos conjuntos de dados</button>
 
     <!------------ ATOM-->
   </div>
