--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -32,9 +32,12 @@
   background-size: 100% 80px;
 }
 
+.navbar-nav > li > a
+  {
+
+  }
 .navbar,
 .navbar-default,
-.navbar-nav > li > a,
 .navbar-default .navbar-nav>li>a,
 #navbarFixed form.navbar-form-link a.ui-commandlink,
 #navbarFixed ul.navbar-nav li.dropdown span.dropdown-toggle
