--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -4,7 +4,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item  me-auto">
           <a class="nav-link" href="index.html">Sobre</a>
@@ -32,13 +32,13 @@
   background-size: 100% 80px;
 }
 
-.navbar-nav > li > a
+.navbar-nav > li > a, .navbar-default .navbar-nav>li>a,
   {
 
   }
 .navbar,
 .navbar-default,
-.navbar-default .navbar-nav>li>a,
+
 #navbarFixed form.navbar-form-link a.ui-commandlink,
 #navbarFixed ul.navbar-nav li.dropdown span.dropdown-toggle
 {
