--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -1,23 +1,17 @@
 <nav class="navbar navbar-expand-lg fixed">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item  me-auto">
+      <ul>
+        <li class="text-right">
           <a class="nav-link" href="index.html">Sobre</a>
         </li>
-        <li class="nav-item  me-auto">
+        <li class="text-right">
           <a class="nav-link" href="indicadores.html">Indicadores</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
-
 
 <style>
 
