--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -1,50 +1,34 @@
-<nav class="navbar navbar-expand-lg fixed">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"></a>
-      <ul>
-        <li class="text-right">
-          <a class="nav-link" href="index.html">Sobre</a>
-        </li>
-        <li class="text-right">
-          <a class="nav-link" href="indicadores.html">Indicadores</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<nav class="navbarCustom fixed">
+  <ul>
+    <li class="text-right">
+      <a class="nav-link" href="index.html">Sobre</a>
+    </li>
+    <li class="text-right">
+      <a class="nav-link" href="indicadores.html">Indicadores</a>
+    </li>
+  </ul>
 </nav>
 
 <style>
-
-.headerCustom {
-  z-index: 10000;
-  width: 100%;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  min-height: 80px;
-  background-image: url("/dvn/assets/img/background_inep.png.png");
-  background-size: 100% 80px;
-}
-
-.navbar-nav > li > a, .navbar-default .navbar-nav>li>a,
-  {
-
+  .headerCustom {
+    z-index: 10000;
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    min-height: 80px;
+    background-image: url("/dvn/assets/img/background_inep.png.png");
+    background-size: 100% 80px;
   }
-.navbar,
-.navbar-default,
 
-#navbarFixed form.navbar-form-link a.ui-commandlink,
-#navbarFixed ul.navbar-nav li.dropdown span.dropdown-toggle
-{
-  margin-top: 80px;
-  min-height: 20px;
-  background-color: #f78747;
-  font-weight: bold;
-  text-decoration: none;
-  line-height: 0.6em;
-  color: #eee;
-  background-image: linear-gradient(to bottom,#f78747 0,#f78747);
-  /* padding-top: 5px; */
-  /* padding-bottom: 5px; */
-}
+  .navbarCustom {
+    margin-top: 80px;
+    min-height: 20px;
+    background-color: #f78747;
+    font-weight: bold;
+    text-decoration: none;
+    line-height: 0.6em;
+    color: #eee;
+    background-image: linear-gradient(to bottom, #f78747 0, #f78747);
+  }
 </style>
