--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -1,13 +1,8 @@
-<nav class="navbarCustom fixed">
-  <ul>
-    <li class="text-right">
-      <a class="nav-link" href="index.html">Sobre</a>
-    </li>
-    <li class="text-right">
-      <a class="nav-link" href="indicadores.html">Indicadores</a>
-    </li>
-  </ul>
-</nav>
+<div class="navbarCustom fixed">
+  <a class="active" href="#home">Home</a>
+  <a href="index.html">News</a>
+  <a href="indicadores.html">Contact</a>
+</div>
 
 <style>
   .headerCustom {
