--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -16,6 +16,15 @@
     background-size: 100% 80px;
   }
 
+.navbarCustom a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
   .navbarCustom {
     margin-top: 80px;
     min-height: 20px;
