--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -1,7 +1,7 @@
 <div class="navbarCustom fixed">
-  <a class="active" href="#home">Home</a>
-  <a href="index.html">News</a>
-  <a href="indicadores.html">Contact</a>
+  <a href="/">Home</a>
+  <a href="index.html">Sobre</a>
+  <a href="indicadores.html">Indicadores</a>
 </div>
 
 <style>
