--- a/branding/about/header.html
+++ b/branding/about/header.html
@@ -39,6 +39,12 @@
         type="text/javascript"
         src="/javax.faces.resource/components.js.xhtml?ln=primefaces&amp;v=11.0.0"
       ></script>
+
+      <script
+        type="text/javascript"
+        src="/dvn/assets/js/dataverse.js?ln=primefaces&amp;v=11.0.0"
+      ></script>
+
       <link
         type="text/css"
         rel="stylesheet"
