--- a/branding/about/indicadores.html
+++ b/branding/about/indicadores.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <head>
-<meta charset="utf-8" />
+  <meta charset="utf-8" />
 </head>
 
-<link href="../assets/css/bootstrap.min.css" rel="stylesheet">
-<script src="../assets/js/bootstrap.bundle.min.js" >
-</script><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="../assets/js/jquery-3.6.1.min"></script>
+<script
+  type="text/javascript"
+  src="/dvn/assets/js/dataverse.js?ln=primefaces&amp;v=11.0.0"
+></script>
 
 <script>
-$(function () {
-  var includes = $('[data-include]')
-  $.each(includes, function () {
-    var file = $(this).data('include') + '.html'
-    $(this).load(file)
-  })
-})
+  $(function () {
+    var includes = $("[data-include]");
+    $.each(includes, function () {
+      var file = $(this).data("include") + ".html";
+      $(this).load(file);
+    });
+  });
 </script>
 
 <style>
-.about
-{
-  border-left: 4px solid #f78747;
-  padding-left: 10px;
-}
-.h_ipen {
-  font-weight: bold;
-  color: #33c;
-}
+  .about {
+    border-left: 4px solid #f78747;
+    padding-left: 10px;
+  }
+  .h_ipen {
+    font-weight: bold;
+    color: #33c;
+  }
 
-.ipen_01 {
-  font-size: 1.2em;
-}
+  .ipen_01 {
+    font-size: 1.2em;
+  }
 </style>
 
 <!--- HEADER -->
@@ -44,22 +47,19 @@ $(function () {
     <div class="col-12">
       <h1>INDICADORES</h1>
 
-
       <h2 class="about">Sobre os indicadores</h2>
 
-        <div>Comunidades Dataverse<span id="ID_dataverse">0</span></div>
-        <div>Conjunto de dados<span id="ID_grupos">0</span></div>
-        <div>Arquivos<span id="div3">0</span></div>
-        <div>Downloads<span id="div4">0</span></div>
+      <div>Comunidades Dataverse<span id="ID_dataverse">0</span></div>
+      <div>Conjunto de dados<span id="ID_grupos">0</span></div>
+      <div>Arquivos<span id="div3">0</span></div>
+      <div>Downloads<span id="div4">0</span></div>
 
-
-        <script>
-        getvals(url_metrics + 'dataverses', 'ID_dataverse', 'Total');
-        getvals(url_metrics + 'datasets', 'ID_grupos', 'Total');
-        getvals(url_metrics + 'files', 'div3', 'Total');
-        getvals(url_metrics + 'downloads', 'div4', 'Total');
-        </script>
-
+      <script>
+        getvals(url_metrics + "dataverses", "ID_dataverse", "Total");
+        getvals(url_metrics + "datasets", "ID_grupos", "Total");
+        getvals(url_metrics + "files", "div3", "Total");
+        getvals(url_metrics + "downloads", "div4", "Total");
+      </script>
     </div>
     <!-- /COL -->
   </div>
