--- a/branding/about/indicadores.html
+++ b/branding/about/indicadores.html
@@ -62,6 +62,8 @@
       </script>
     </div>
 
+
+    <h2 class="about">Áreas do conhecimento</h2>
     <div id="dataversesBySubject" class="col-xs-12"></div>
     <script>
       querySubjectDataset("dataversesBySubject");
