--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -9,13 +9,13 @@
   .btnipen {
     background-color: #f5f5f5;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 1px;
     color: #333;
     display: inline-block;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.42857;
-    padding: 6px 12px;
+    /* padding: 6px 12px; */
     text-align: center;
     vertical-align: middle;
     white-space: nowrap;
@@ -80,28 +80,28 @@
   </div>
   <div id="centers" class="text-center col-md-6">
     <div style="height: 150px"></div>
-    <a href="/dataverse/CEBIO" class="btnipen" role="button">CEBIO</a>
-    <a href="/dataverse/CECCO" class="btnipen" role="button">CECCO</a>
+    <a href="/dataverse/CEBIO" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cebio.jpg" height="32" ></a>
+    <a href="/dataverse/CECCO" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cecco.jpg" height="32" ></a>
     <br />
-    <a href="/dataverse/CECTM" class="btnipen" role="button">CECTM</a>
-    <a href="/dataverse/CECON" class="btnipen" role="button">CECON</a>
-    <a href="/dataverse/CEENG" class="btnipen" role="button">CEENG</a>
+    <a href="/dataverse/CECTM" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cectm.jpg" height="32" ></a>
+    <a href="/dataverse/CECON" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cecon.jpg" height="32" ></a>
+    <a href="/dataverse/CEENG" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/ceeng.jpg" height="32" ></a>
     <br />
-    <a href="/dataverse/CELAP" class="btnipen" role="button">CELAP</a>
-    <a href="/dataverse/SEGMR" class="btnipen" role="button">SEGMR</a>
-    <a href="/dataverse/CEQMA" class="btnipen" role="button">CEQMA</a>
-    <a href="/dataverse/CECRF" class="btnipen" role="button">CECRF</a>
+    <a href="/dataverse/CELAP" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/celap.jpg" height="32" ></a>
+    <a href="/dataverse/SEGMR" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/segmr.jpg" height="32" ></a>
+    <a href="/dataverse/CEQMA" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/ceqma.jpg" height="32" ></a>
+    <a href="/dataverse/CECRF" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cecrf.jpg" height="32" ></a>
     <br />
-    <a href="/dataverse/CERPQ" class="btnipen" role="button">CERPQ</a>
-    <a href="/dataverse/CETER" class="btnipen" role="button">CETER</a>
-    <a href="/dataverse/SEIDC" class="btnipen" role="button">SEIDC</a>
+    <a href="/dataverse/CERPQ" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cerpq.jpg" height="32" ></a>
+    <a href="/dataverse/CETER" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/ceter.jpg" height="32" ></a>
+    <a href="/dataverse/SEIDC" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/seidc.jpg" height="32" ></a>
     <br />
     <a
       href="/dataverse/projects"
       class="btnipen"
       style="margin-left: 160px; size: 0.6em"
       role="button"
-      >Projetos<br />Especiais</a
-    >
+      >
+    <img src="/dvn/assets/img/centros/projetos_especiais.jpg" height="32" >
   </div>
 </div>
