--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -74,27 +74,27 @@
     </form>
     <!-- BOTAO EXPLORAR-->
     <br/>
-    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="window.location.href='/dataverse/IPEN/'">Explorar nossos conjuntos de dados</button>
+    <button type="button" class="btn btn-danger btn-lg btn-block" onclick="window.location.href='/dataverse/IPEN/'">Explorar nossos conjuntos de dados</button>
 
     <!------------ ATOM-->
   </div>
   <div id="centers" class="text-center col-md-6">
     <div style="height: 150px"></div>
-    <a href="/dataverse/CEBIO" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cebio.jpg" height="32" ></a>
-    <a href="/dataverse/CECCO" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cecco.jpg" height="32" ></a>
+    <a href="/dataverse/CEBIO" title="Centro de Biotecnologia" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cebio.jpg" height="32" ></a>
+    <a href="/dataverse/CECCO" title="Centro de Célula e Combustível e Hidrogênio" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cecco.jpg" height="32" ></a>
     <br />
-    <a href="/dataverse/CECTM" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cectm.jpg" height="32" ></a>
-    <a href="/dataverse/CECON" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cecon.jpg" height="32" ></a>
-    <a href="/dataverse/CEENG" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/ceeng.jpg" height="32" ></a>
+    <a href="/dataverse/CECTM" title="Centro de Ciências e Tecnologia de Materiais" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cectm.jpg" height="32" ></a>
+    <a href="/dataverse/CECON" title="Centro de Combustível Nuclear" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cecon.jpg" height="32" ></a>
+    <a href="/dataverse/CEENG" title="Centro de Engenharia Nuclear" class="btnipen" role="button"><img src="/dvn/assets/img/centro/ceeng.jpg" height="32" ></a>
     <br />
-    <a href="/dataverse/CELAP" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/celap.jpg" height="32" ></a>
-    <a href="/dataverse/SEGMR" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/segmr.jpg" height="32" ></a>
-    <a href="/dataverse/CEQMA" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/ceqma.jpg" height="32" ></a>
-    <a href="/dataverse/CECRF" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cecrf.jpg" height="32" ></a>
+    <a href="/dataverse/CELAP" title="Centro de Lasers e Aplicações" class="btnipen" role="button"><img src="/dvn/assets/img/centro/celap.jpg" height="32" ></a>
+    <a href="/dataverse/SEGMR" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centro/segmr.jpg" height="32" ></a>
+    <a href="/dataverse/CEQMA" title="Centro de Química e Meio Ambiente" class="btnipen" role="button"><img src="/dvn/assets/img/centro/ceqma.jpg" height="32" ></a>
+    <a href="/dataverse/CECRF" title="Centro de Radiofarmácia" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cecrf.jpg" height="32" ></a>
     <br />
-    <a href="/dataverse/CERPQ" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/cerpq.jpg" height="32" ></a>
-    <a href="/dataverse/CETER" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/ceter.jpg" height="32" ></a>
-    <a href="/dataverse/SEIDC" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centros/seidc.jpg" height="32" ></a>
+    <a href="/dataverse/CERPQ" title="Centro do Reator de Pesquisa" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cerpq.jpg" height="32" ></a>
+    <a href="/dataverse/CETER" title="Centro de Tecnologia das Radiações" class="btnipen" role="button"><img src="/dvn/assets/img/centro/ceter.jpg" height="32" ></a>
+    <a href="/dataverse/SEIDC" title="Coordenação de Ensino e Informação" class="btnipen" role="button"><img src="/dvn/assets/img/centro/seidc.jpg" height="32" ></a>
     <br />
     <a
       href="/dataverse/projects"
@@ -102,6 +102,6 @@
       style="margin-left: 160px; size: 0.6em"
       role="button"
       >
-    <img src="/dvn/assets/img/centros/projetos_especiais.jpg" height="32" >
+    <img src="/dvn/assets/img/centro/projetos_especiais.jpg" height="32" >
   </div>
 </div>
