--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -74,7 +74,7 @@
     </form>
     <!-- BOTAO EXPLORAR-->
     <br/>
-    <button type="button" class="btn btn-danger btn-lg btn-block" onclick="window.location.href='/dataverse/IPEN/'">Explorar nossos conjuntos de dados</button>
+    <button type="button" class="btn btn-warning btn-lg btn-block" onclick="window.location.href='/dataverse/IPEN/'">Explorar nossos conjuntos de dados</button>
 
     <!------------ ATOM-->
   </div>
