--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -79,7 +79,7 @@
     <!------------ ATOM-->
   </div>
   <div id="centers" class="text-center col-md-6">
-    <div style="height: 150px"></div>
+    <div style="height: 60px">Dados por Centros do IPEN</div>
     <a href="/dataverse/CEBIO" title="Centro de Biotecnologia" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cebio.jpg" height="32" ></a>
     <a href="/dataverse/CECCO" title="Centro de Célula e Combustível e Hidrogênio" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cecco.jpg" height="32" ></a>
     <br />
