--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -12,7 +12,7 @@
     top: 0px;
     left: 0px;
     min-height: 80px;
-    background-image: url("/dvn/assets/img/background_inep.png.png");
+    background-image: url("/dvn/assets/img/background/background_inep.png");
     background-size: 100% 80px;
   }
 
