--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -1,7 +1,10 @@
 <div class="navbarCustom fixed">
   <a href="/">Home</a>
-  <a href="index.html">Sobre</a>
   <a href="indicadores.html">Indicadores</a>
+  <a href="index.html">Sobre</a>
+  <a href="faq.html">FAQ</a>
+  <a href="politica.html">Política</a>
+
 </div>
 
 <style>
