--- a/branding/about/menu.html
+++ b/branding/about/menu.html
@@ -1,10 +1,10 @@
 <div class="navbarCustom fixed">
-  <a href="/">Home</a>
   <a href="indicadores.html">Indicadores</a>
-  <a href="index.html">Sobre</a>
   <a href="faq.html">FAQ</a>
-  <a href="politica.html">Política</a>
-
+  <a href="https://www.ipen.br/portal_por/conteudo/biblioteca/arquivos/PGD_JULJHO_22_ATUALIZADO.pdf" target="_blank">Plano de Gestão de Dados (PGD)</a>
+  <a href="politica.html">Política e Termos de Uso</a>
+  <a href="index.html">Sobre</a>
+  <a href="/">Home</a>
 </div>
 
 <style>
