--- a/branding/about/politica.html
+++ b/branding/about/politica.html
@@ -45,7 +45,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1>FAQ</h1>
+      <h1>Política e Termos de Uso</h1>
     <!-- /COL -->
   </div>
   <!-- /ROW -->
