--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -88,7 +88,7 @@
     <a href="/dataverse/CEENG" title="Centro de Engenharia Nuclear" class="btnipen" role="button"><img src="/dvn/assets/img/centro/ceeng.jpg" height="64" ></a>
     <br />
     <a href="/dataverse/CELAP" title="Centro de Lasers e Aplicações" class="btnipen" role="button"><img src="/dvn/assets/img/centro/celap.jpg" height="64" ></a>
-    <a href="/dataverse/SEGMR" title="" class="btnipen" role="button"><img src="/dvn/assets/img/centro/segmr.jpg" height="64" ></a>
+    <a href="/dataverse/SEGMR" title="Serviço de Metrologia das Radiações" class="btnipen" role="button"><img src="/dvn/assets/img/centro/segmr.jpg" height="64" ></a>
     <a href="/dataverse/CEQMA" title="Centro de Química e Meio Ambiente" class="btnipen" role="button"><img src="/dvn/assets/img/centro/ceqma.jpg" height="64" ></a>
     <a href="/dataverse/CECRF" title="Centro de Radiofarmácia" class="btnipen" role="button"><img src="/dvn/assets/img/centro/cecrf.jpg" height="64" ></a>
     <br />
