--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -45,10 +45,10 @@
     </p>
 
     <p>
-      Antes de realizar qualquer depósito, consulte os Termos e condições de uso
+      Antes de realizar qualquer depósito, consulte os <a href="#">Termos e condições</a> de uso
       do repositório.
     </p>
-    <p>Se precisar de assistência, entre em contato com a Biblioteca IPEN.</p>
+    <p>Se precisar de assistência, entre em contato com a <a href="mailto:bibl@ipen.br">Biblioteca IPEN</a>.</p>
 
     <!----------- Busca -->
     <form class="form mt-4">
