--- a/branding/custom-homepage.html
+++ b/branding/custom-homepage.html
@@ -1,4 +1,11 @@
 <style>
+h1
+  {
+    font-size: 2.0em;
+    font-weight: 700;
+    line-height: 1.1;
+    color: #000;
+  }
   #centers {
     background-image: url(/dvn/assets/img/atom.jpg);
     background-repeat: no-repeat;
