--- a/branding/custom-header.html
+++ b/branding/custom-header.html
@@ -6,7 +6,7 @@
         <img
           src="/dvn/assets/img/logo_ipen.png"
           alt="Instituto de Pesquisas Energéticas e Nucleares"
-          style="height: 50px"
+          style="height: 50px; margin-top: 5px;"
         />
         </a>
       </div>
