--- a/branding/custom-header.html
+++ b/branding/custom-header.html
@@ -20,10 +20,10 @@
         </a>
       </div>
       <div class="col-md-10 text-center">
-        <span class="h_ipen ipen_01"
-          >Instituto de Pesquisas Energéticas e Nucleares</span
+        <span class="h_ipen ipen_01" style="font-size: 1.2em"
+          >INSTITUTO DE PESQUISAS ENERGÉTICAS E NUCLEARES</span
         ><br />
-        <span class="h_ipen ipen_02"
+        <span class="h_ipen ipen_02" style="font-style: italic;"
           >Ciência e Tecnologia a serviço da vida</span
         ><br />
         <span class="h_ipen ipen_03"
