--- a/branding/custom-header.html
+++ b/branding/custom-header.html
@@ -6,7 +6,7 @@
         <img
           src="/dvn/assets/img/logo_ipen.png"
           alt="Instituto de Pesquisas Energéticas e Nucleares"
-          style="height: 50px; margin-top: 5px;"
+          style="height: 50px; margin-top: 10px;"
         />
         </a>
       </div>
@@ -16,10 +16,11 @@
           src="/dvn/assets/img/logo_dataverse.png"
           alt="Dataverse"
           style="height: 50px"
+          style="margin-top: 10px;"
         />
         </a>
       </div>
-      <div class="col-md-10 text-center">
+      <div class="col-md-10 text-center" style="margin-top: 10px;">
         <span class="h_ipen ipen_01" style="font-size: 1.2em"
           >INSTITUTO DE PESQUISAS ENERGÉTICAS E NUCLEARES</span
         ><br />
