--- a/branding/custom-header.html
+++ b/branding/custom-header.html
@@ -34,4 +34,4 @@
     </div>
   </div>
 </div>
-<div style=""height: 100px">&nbsp</div>
+<div class="container"><div class="row"> style=""height: 100px">&nbsp</div></div></div>
